<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Generics -->
	    <string name="app_name">Experiments</string>
	    <string name="action_settings">Settings</string>
	    <string name="hello_world">Hello world!</string>
	
	    <string name="generic_bt_ok">OK</string>
	    <string name="generic_bt_cancel">キャンセル</string>
	    <string name="generic_tv_confirm">確認</string>
	    <string name="generic_tv_menu">メニュー</string>
	    <string name="generic_tv_register">登録</string>
	    <string name="generic_tv_edit">編集</string>
	    <string name="generic_tv_delete">削除</string>
	    <string name="generic_tv_upload">Upload</string>

	    
	<!-- MainActv -->
	    <string name="mainactv_list_position">Location Manager</string>
	    <string name="mainactv_list_tweet_app">Tweet App</string>
	    <string name="mainactv_list_pm">Position Manager</string>
	
	<!-- actv_location.xml -->
		<string name="actv_loc_tv_longi">Longitude</string>
		<string name="actv_loc_tv_lat">Latitude</string>
		<string name="actv_loc_tv_get_data">Get data</string>
		<string name="actv_loc_tv_save_data">Save data</string>
		<string name="actv_loc_tv_post_data">Post data</string>
		<string name="actv_loc_tv_show_map">Show map</string>
	
	<!-- preferences -->
		<string name="prefName">pref_lm</string>
		<string name="prefKey_ShowMemoDialog">
		    					show_memo_dialog</string>
		<string name="prefTitle_ShowMemoDialog">
		    					Show memo dialog</string>

	<!-- Menu: LocActv -->
		<string name="menu_LocActv_DB_Dialog_Title">
		    					DB Admin</string>
		<string name="menu_LocActv_DB_Menu_Title">
		    					DB</string>
		<string name="menu_LocActv_Backup_Db">Backup DB</string>
	    <string name="menu_LocActv_Refresh_Db">DBリフレッシュ</string>
	    <string name="menu_LocActv_Restore_Db">Restore db</string>
	    <string name="menu_LocActv_Upload_Db">Upload db</string>
	    <string name="menu_LocActv_Exec_Sql">Exec sql</string>
	    
	<!-- Intent names -->
		<string name="intent_showmap_longitude">showmap_Longitude</string>
		<string name="intent_showmap_latitude">showmap_Latitude</string>
		
	<!-- dlg_edit_locs.xml -->
		<string name="dlg_edit_locs_title">Edit Location</string>
		<string name="dlg_edit_locs_memo_title">Memo</string>
		<string name="dlg_edit_locs_date_title">Date</string>

	<!-- TweetApp -->
		  <string
		    name="btn_timeline">Get Timeline</string>
		  <string
		    name="btn_login">Login</string>
		  <string
		    name="tv_login_request">Please login, first..</string>
		  <string
		    name="btn_tweet">Tweet</string>
		  <string
		    name="btn_back">Back</string>
		  <string
		    name="dlg_get_timeline">Getting Timeline...</string>
		  <string
		    name="tv_charscount">Number of Characters:</string>
		  <string
		    name="tv_charsmax">You entered over 140 chars!</string>
		  <string
		    name="tv_timeline_title">TIMELINE</string>
		  <string
		    name="tv_tweetupdate_title">TWEET</string>

	<!-- actv_pm.xml -->
		<string name="actv_pm_x">X</string>
		<string name="actv_pm_y">Y</string>
		<string name="actv_pm_z">Z</string>

</resources>
