<?xml version="1.0" encoding="utf-8"?>
<!-- リニアレイアウト(縦並び) -->
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  
  <!-- トップ画像 -->
  <ImageView 
    android:background="@drawable/icon"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp" />
    
  <!-- 区切り線 -->
  <TextView
    android:background="@drawable/line"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    
  <!-- ログイン用テキスト  -->

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="5dp"
      android:gravity="center_horizontal"
      android:text="@string/tv_login_request"
      android:textSize="20sp" />
  
  <!-- ログインボタン -->

  <Button
      android:layout_width="200dp"
      android:layout_height="60dp"
      android:layout_gravity="center_horizontal"
      android:onClick="onClickBtnLogin"
      android:text="@string/btn_login"
      android:textSize="25sp" />
  
  <!-- 区切り線 -->
  <TextView
    android:background="@drawable/line"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    
  <!-- タイムライン取得ボタン -->

  <Button
      android:layout_width="200dp"
      android:layout_height="60dp"
      android:layout_gravity="center_horizontal"
      android:layout_margin="5dp"
      android:background="@color/yello"
      android:onClick="onClickBtnTimeline"
      android:text="@string/btn_timeline"
      android:textColor="@color/black"
      android:textSize="25sp" />

  <!-- つぶやきボタン -->

  <Button
      android:id="@+id/btn_tweet"
      android:layout_width="200dp"
      android:layout_height="60dp"
      android:layout_gravity="center_horizontal"
      android:layout_margin="5dp"
      android:background="@color/blue1"
      android:onClick="onClickBtnTweet"
      android:text="@string/btn_tweet"
      android:textColor="@color/white"
      android:textSize="25sp" />

</LinearLayout>
