<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/actv_loc_tv_longi_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:background="@color/black"
                android:padding="10dp"
                android:text="@string/actv_loc_tv_longi"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/actv_loc_tv_longi_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:padding="10dp"
                android:text="TextView"
                android:textSize="25sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/actv_loc_tv_lat_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:background="@color/black"
                android:padding="10dp"
                android:text="@string/actv_loc_tv_lat"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/actv_loc_tv_lat_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:padding="10dp"
                android:text="TextView"
                android:textSize="25sp" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <Button
                android:id="@+id/actv_loc_bt_get_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/blue1"
                android:padding="5dp"
                android:text="@string/actv_loc_tv_get_data"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/actv_loc_bt_save_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/darkgreen"
                android:padding="5dp"
                android:text="@string/actv_loc_tv_save_data"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <Button
                android:id="@+id/actv_loc_bt_post_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/brown"
                android:padding="5dp"
                android:text="@string/actv_loc_tv_post_data"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/actv_loc_bt_show_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/gold2"
                android:padding="5dp"
                android:text="@string/actv_loc_tv_show_map"
                android:textColor="@color/blue1"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/actv_loc_tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="TextView"
            android:textColor="@color/yello"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>
